@@ -8,6 +8,7 @@
 - Fix `.matchFragments` for `length(fmass) == 0` [2018-01-27].
 - Just plot fragments that are present in current `TopDownSet` see [#70](https://github.com/sgibb/topdownr/issues/70)
   [2018-01-27].
+- Add `combine,FragmentViews,FragmentViews-method` [2018-01-27].
 
 ## Changes in version 1.1.5
 - Keep full filename (before `basename` was used) in `AbstractTopDownSet`
